--- a/text_sumarisier.ipynb
+++ b/text_sumarisier.ipynb
@@ -57,13 +57,84 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "pip install PyPDF2"
       ],
       "metadata": {
-        "id": "48RNuGBQIHQ0"
+        "id": "48RNuGBQIHQ0",
+        "outputId": "30a3caaf-5592-429c-f80d-7d6d2db03ebb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting PyPDF2\n",
+            "  Downloading PyPDF2-1.27.5-py3-none-any.whl (64 kB)\n",
+            "\u001b[?25l\r\u001b[K     |█████                           | 10 kB 25.0 MB/s eta 0:00:01\r\u001b[K     |██████████                      | 20 kB 33.9 MB/s eta 0:00:01\r\u001b[K     |███████████████▏                | 30 kB 20.9 MB/s eta 0:00:01\r\u001b[K     |████████████████████▏           | 40 kB 13.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▎      | 51 kB 12.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▎ | 61 kB 14.5 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 64 kB 2.5 MB/s \n",
+            "\u001b[?25hInstalling collected packages: PyPDF2\n",
+            "Successfully installed PyPDF2-1.27.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from PyPDF2 import PdfFileReader, PdfFileWriter\n",
+        "\n",
+        "file_path = 'Code_of_Conduct.pdf'\n",
+        "pdf = PdfFileReader(file_path)\n",
+        "\n",
+        "with open('curtin.txt', 'w') as f:\n",
+        "    for page_num in range(pdf.numPages):\n",
+        "        # print('Page: {0}'.format(page_num))\n",
+        "        pageObj = pdf.getPage(page_num)\n",
+        "\n",
+        "        try: \n",
+        "            txt = pageObj.extractText()\n",
+        "            print(''.center(100, '-'))\n",
+        "        except:\n",
+        "            pass\n",
+        "        else:\n",
+        "            f.write('Page {0}\\n'.format(page_num+1))\n",
+        "            f.write(''.center(100, '-'))\n",
+        "            f.write(txt)\n",
+        "    f.close()"
+      ],
+      "metadata": {
+        "id": "dyH1OoBla0h3",
+        "outputId": "6971b5bb-834e-42dd-96c6-f6c7740bd8f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "----------------------------------------------------------------------------------------------------\n",
+            "----------------------------------------------------------------------------------------------------\n",
+            "----------------------------------------------------------------------------------------------------\n",
+            "----------------------------------------------------------------------------------------------------\n",
+            "----------------------------------------------------------------------------------------------------\n",
+            "----------------------------------------------------------------------------------------------------\n",
+            "----------------------------------------------------------------------------------------------------\n",
+            "----------------------------------------------------------------------------------------------------\n",
+            "----------------------------------------------------------------------------------------------------\n",
+            "----------------------------------------------------------------------------------------------------\n",
+            "----------------------------------------------------------------------------------------------------\n",
+            "----------------------------------------------------------------------------------------------------\n",
+            "----------------------------------------------------------------------------------------------------\n",
+            "----------------------------------------------------------------------------------------------------\n"
+          ]
+        }
+      ]
     }
   ]
 }
