--- a/text_sumarisier.ipynb
+++ b/text_sumarisier.ipynb
@@ -61,10 +61,10 @@
       ],
       "metadata": {
         "id": "48RNuGBQIHQ0",
-        "outputId": "30a3caaf-5592-429c-f80d-7d6d2db03ebb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "30a3caaf-5592-429c-f80d-7d6d2db03ebb"
       },
       "execution_count": 1,
       "outputs": [
@@ -84,6 +84,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Extracting a PDF file\n",
         "from PyPDF2 import PdfFileReader, PdfFileWriter\n",
         "\n",
         "file_path = 'Code_of_Conduct.pdf'\n",
@@ -106,11 +107,11 @@
         "    f.close()"
       ],
       "metadata": {
-        "id": "dyH1OoBla0h3",
-        "outputId": "6971b5bb-834e-42dd-96c6-f6c7740bd8f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dyH1OoBla0h3",
+        "outputId": "6971b5bb-834e-42dd-96c6-f6c7740bd8f9"
       },
       "execution_count": 2,
       "outputs": [
@@ -135,6 +136,34 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Extracting an HTML(webpage)\n",
+        "from bs4 import BeautifulSoup\n",
+        "from urllib.request import Request, urlopen\n",
+        "import re\n",
+        "\n",
+        "req = Request(\"https://en.wikipedia.org/wiki/Python_(programming_language)\")\n",
+        "html_page = urlopen(req)\n",
+        "\n",
+        "soup = BeautifulSoup(html_page, \"html.parser\")\n",
+        "\n",
+        "html_text = soup.get_text()\n",
+        "\n",
+        "f = open(\"html_text.txt\", \"w\")         # Creating html_text.txt File\n",
+        "\n",
+        "for line in html_text:\n",
+        "\tf.write(line)\n",
+        "\n",
+        "f.close()"
+      ],
+      "metadata": {
+        "id": "vmHiZFNSfC44"
+      },
+      "execution_count": 3,
+      "outputs": []
     }
   ]
 }
